--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
 </head>
 <body>
 	<div class="container">
-		<div id="buttons"></div>
-		<div id="messages"></div>
+		<div class="gamespace">
+			<div id="messages"></div>
+			<div id="buttons">
+				<button id="button-rock">Kamień</button>
+				<button id="button-paper">Papier</button>
+				<button id="button-scissors">Nożyce</button>
+			</div>
+		</div>
 	</div>
 	<script src="js/functions.js"></script>
 	<script src="js/script.js"></script>
