--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 		<div class="gamespace">
 			<div id="messages"></div>
 			<div id="buttons">
-				<button id="button-rock">Kamień</button>
-				<button id="button-paper">Papier</button>
-				<button id="button-scissors">Nożyce</button>
+				<button type="button" id="button-rock">Kamień</button>
+				<button type="button" id="button-paper">Papier</button>
+				<button type="button" id="button-scissors">Nożyce</button>
 			</div>
 		</div>
 	</div>
